# store-predict

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  delta.txt  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json
.claude/agents/: coverage-analyzer.md  security-reviewer.md
.claude/skills/: settings.json
.github/workflows/: ci.yml  docs.yml  extra-checks.yml  release.yml  security.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v5.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v7.0-REQUIREMENTS.md  v7.0-ROADMAP.md  v8.0-MILESTONE-AUDIT.md  v8.0-REQUIREMENTS.md  v8.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
adr/: index.html
adr/001-nicegui-framework/: index.html
adr/002-drr-csv-reference/: index.html
adr/003-alias-not-fuzzy-matching/: index.html
adr/004-dataframe-not-dataclass/: index.html
adr/005-conservative-drr/: index.html
adr/006-no-mocks-testing/: index.html
adr/007-aggrid-vm-table/: index.html
adr/008-session-storage-split/: index.html
adr/009-dialog-multi-workload/: index.html
adr/010-nicegui-3x/: index.html
adr/011-substring-matching/: index.html
adr/012-priority-ordered-rules/: index.html
adr/013-weighted-average-drr/: index.html
adr/014-drr-guard/: index.html
adr/015-canonical-dataframe-schema/: index.html
adr/016-template-filter-orchestrator/: index.html
adr/017-rvtools-mb-as-mib/: index.html
adr/018-openpyxl-read-only-detection/: index.html
adr/019-shared-liveoptics-helper/: index.html
adr/020-dark-mode-user-storage/: index.html
adr/021-dual-workload-edit/: index.html
adr/022-stats-clear-rebuild/: index.html
adr/023-page-routes-side-effects/: index.html
adr/024-workload-dialog-props/: index.html
adr/025-reportlab-platypus/: index.html
adr/026-vera-ttf-fonts/: index.html
adr/027-pdf-in-memory-bytesio/: index.html
adr/028-ui-table-report-page/: index.html
adr/029-three-layer-architecture/: index.html
adr/030-docker-single-container/: index.html
adr/031-magic-byte-validation/: index.html
adr/032-log-sanitization/: index.html
adr/033-context-manager-layout/: index.html
adr/034-sap-word-boundary/: index.html
adr/035-postgres-mysql-before-sql/: index.html
adr/036-citrix-full-clone-default/: index.html
adr/037-fortinet-os-field-detection/: index.html
adr/038-mkdocs-material/: index.html
adr/039-uv-package-manager/: index.html
adr/040-pyproject-single-config/: index.html
adr/041-strict-mypy-type-checking/: index.html
adr/042-web-server-content-included-default/: index.html
adr/043-i18n-architecture-t-wrapper-yaml/: index.html
adr/044-language-switch-page-reload/: index.html
adr/045-echart-for-web-charts/: index.html
adr/046-pdf-charts-page-two/: index.html
adr/047-sankey-reportlab-strategy/: index.html
adr/048-aggrid-community-detail-bar/: index.html
adr/049-aggrid-event-args-filter/: index.html
adr/050-click-zoom-vs-reclassify/: index.html
adr/051-llm-rule-suggestion-loop/: index.html
adr/052-storage-model-flat-drr-override/: index.html
adr/053-app-level-drr-as-csv-variants/: index.html
adr/054-llm-toggle-session-scoped/: index.html
adr/055-layout-engine-bfd-heuristic/: index.html
adr/056-three-layout-strategies/: index.html
adr/057-vmfs-not-vvol-layout/: index.html
adr/058-isolated-vm-dedicated-datastore/: index.html
adr/059-default-iops-estimates/: index.html
adr/060-stable-row-identity-via-row-index/: index.html
adr/061-health-check-pure-pipeline-module/: index.html
adr/062-compute-presets-csv/: index.html
adr/063-typeddict-session-config/: index.html
adr/064-datacenter-cluster-scope-filtering/: index.html
adr/065-windows-desktop-os-vdi-reclassification/: index.html
adr/066-session-persistence-zip-archive/: index.html
adr/067-session-zip-sentinel/: index.html
adr/068-remediation-hints-hardcoded-english/: index.html
adr/069-concerns-export-pure-reportlab/: index.html
adr/070-playwright-browsers-path-docker/: index.html
adr/071-plotly-kaleido-pdf-charts/: index.html
adr/072-dark-mode-auto-detect/: index.html
architecture/: index.html
changelog/: index.html
docker/stubs/: litellm.py  (+1 more)
docs/: architecture.md  getting-started.md  index.md  prd.md
getting-started/: index.html
prd/: index.html
research/: index.html
scripts/: classify_customer_dump.py  start.sh  stop.sh  tune_semantic_thresholds.py
search/: search_index.json
tests/: conftest.py  test_calculation.py  test_calculation_enhanced.py  test_classification.py  test_classification_cascade.py  test_classification_integration.py  test_classification_prefix.py  test_compute_sizing.py  test_concerns_export.py  test_drr_table.py  test_excel_report.py  test_health_checks.py  test_i18n.py  test_ignore_selection.py  test_ingestion.py  test_layout_engine.py  test_layout_page_ds_size.py  test_liveoptics_performance.py  test_liveoptics_vm_disks.py  test_llm_classifier.py  test_log_sanitization.py  test_logo_ui_wiring.py  test_main_startup.py  test_merger.py  test_models.py  test_pdf_branding.py  test_pdf_charts.py  test_pdf_enhanced.py  test_pdf_report.py  test_performance.py  test_pptx_charts.py  test_pptx_report.py  test_real_customer_baseline.py  test_report_print.py  test_rvtools_guest_capacity.py  test_sanitizers.py  test_scope_filtering.py  test_semantic_classifier.py  test_semantic_config.py  test_session_archive.py  (+5 more)
user-guide/: index.html
(+441 files in other folders)
