[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "store-predict"
version = "10.3.1"
description = "Dell PowerStore DRR sizing tool"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.4,<4.0",
    "pandas>=2.2,<4.0",
    "openpyxl>=3.1.2",
    "reportlab>=4.0",
    "python-i18n[YAML]>=0.3.9",
    "xlsxwriter>=3.2.9",
    "pillow>=12.2.0",
    "matplotlib>=3.8",
    "python-pptx>=1.0,<2.0",
    "semantic-router>=0.1.15,<0.2.0",  # >=0.1.15: CVE-2026-42208 (0.1.14 yanked: unbounded litellm pin)
    "fastembed>=0.8,<0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pyright>=1.1.408",
    "pandas-stubs>=2.2",
    "types-PyYAML",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.uv]
# litellm 1.83.9 pins `aiohttp>=3.13.3, <3.13.3+` (frozen-dep style), which blocks
# Dependabot-flagged aiohttp CVE fixes (GHSA-trailer-headers, UNC SSRF on Windows,
# multipart-size bypass, duplicate Host headers, etc.). Patch releases in the 3.13.x
# line are ABI-compatible; relax the pin so we can pick up security patches.
# The same frozen-dep pattern from litellm also blocks nicegui 3.10 (which needs
# aiohttp>=3.13.4) — so this override also unblocks the nicegui upgrade-filename
# CVE fix.
override-dependencies = [
    "aiohttp>=3.13.5,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
store_predict = ["data/*.csv", "data/*.png", "data/*.ttf", "data/*.yaml", "i18n/locales/*.yaml"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["store_predict"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "nicegui.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pptx.*"
# python-pptx ships a partial py.typed; skip following it so its untyped
# calls (RGBColor.from_string, CategoryChartData, .chart) aren't flagged
# under strict mode. ignore_missing_imports alone is a no-op for a typed pkg.
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "i18n.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xlsxwriter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "semantic_router.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastembed.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = false

[tool.coverage.run]
omit = [
    "src/store_predict/ui/*",
    "src/store_predict/main.py",
    "src/store_predict/logging_config.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=store_predict --cov-report=term-missing --cov-report=xml"
markers = ["slow: tests that load the FastEmbed model (real embeddings)"]
